--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -1,6 +1,15 @@
+
+<center>
+
 <h1>
-	Abc
+	Welcome to Social Fitness
 </h1>
+
+<h2>
+	The best tool to keep you motivated and working out!
+</h2>
+
+</center>
 
 <div class="panel panel-default">
   <div class="panel-heading">Panel heading without title</div>
