--- a/app/views/dashboard/shared/_my_group.html.erb
+++ b/app/views/dashboard/shared/_my_group.html.erb
@@ -5,6 +5,17 @@
 		My Groups
 	</h1>
 
+	<h3>
+
+		<% unless current_user.groups.empty? %>
+
+		<%= link_to current_user.groups.first.name, show_group_path(current_user.groups.first.name) %>
+
+		<% end %>
+
+
+	</h3>
+
 <br/>
 <br/>
 <br/>
