--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
 
 <body>
 
-	<%= render "layouts/shared/header_menu" %>
+	<% if !@at_home_page %>
+		<%= render "layouts/shared/header_menu" %>
+	<% end %>
 
 	<%= yield %>
 
