--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,9 +10,12 @@
  *
 
  @import "bootstrap";
- 
+ @import "font-awesome";
+
+ *= require font-awesome 
  *= require bootstrap
  *= require_self
  *= require_tree .
+
  
  */
