--- a/app/views/layouts/shared/_header_menu.html.erb
+++ b/app/views/layouts/shared/_header_menu.html.erb
@@ -1,33 +1,47 @@
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Social Fitness</a>
+<div class="navbar-wrapper">
+  <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">Easy Workout Tracker!</a>
+      </div>
+
+      <div class="navbar-collapse collapse">
+
+        <div class="pull-right margin-right">
+          <ul class="nav navbar-nav">
+
+            <ul class="navbar-nav navbar-right">
+
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle margin-right" data-toggle="dropdown">
+
+                    <%= current_user.full_name %> &nbsp
+
+                    <%=image_tag current_user.profile_pic_url, size: "50x50"%>
+
+                    <b class="caret"></b>
+                </a>
+              
+                <ul class="dropdown-menu">
+                      
+                  <li>
+                    <a href="#">
+                      Profile Settings
+                    </a>
+                  </li>
+                  <li>
+                    <a href="/users/sign_out">
+                      Log Out
+                    </a>
+                  </li>
+              
+                </ul>
+              </li>
+
+            </ul>
+          </ul>
+        </div>    
+      </div>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      
-      <ul class="nav navbar-nav navbar-right">
-        
-      <% if user_signed_in? %>
-
-        <%= render "layouts/shared/logged_in_right_header" %>
-
-      <% else %>
-
-        <%= link_to "facebook Login", "auth/facebook" %>
-
-      <% end %>
-
-
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+  </div>
+</div>
