--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -91,8 +91,8 @@ border-left:solid grey;
               <% if user_signed_in? %>
 
                 <li>
-                  <button class="btn btn-primary navbar-btn" onclick="location.href='/dashboard'">
-                  <%= current_user.first_name %>'s Workouts 
+                  <button class="btn btn-primary navbar-btn" onclick="location.href='/home'">
+                  My Workouts 
                   </button>
                 </li>
               
@@ -102,6 +102,8 @@ border-left:solid grey;
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle margin-right" data-toggle="dropdown">
+
+                    <%= current_user.full_name %> &nbsp
 
                     <%=image_tag current_user.profile_pic_url, size: "50x50"%>
 
