--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -61,9 +61,13 @@
     margin-bottom: 300px
   }
 
-  .sign-up-modal-social {
-    text-align:right;
-border-left:solid grey;
+  .text-align-center {
+    text-align:center;
+  }
+
+  .log-in-modal {
+    border-right:solid grey;
+
   }
 
   .image-circle {
@@ -83,6 +87,10 @@ border-left:solid grey;
 
   .sign-up-feature {
     margin-top: 150px;
+  }
+
+  .vertical-center { 
+    margin-top: 20%;
   }
 
 </style>
@@ -151,7 +159,9 @@ border-left:solid grey;
 
                   &nbsp
 
-                  <button type="button" class="btn btn-default navbar-btn">Log in</button>
+                  <button type="button" class="btn btn-default navbar-btn" data-toggle="modal" data-target="#LoginModal">Log in</button>
+
+
 
               <% end %>
               </ul>
@@ -298,39 +308,110 @@ border-left:solid grey;
       </div>
 
       <div class="container margin-thanks">
-
         <hr class="featurette-divider"> 
-          <div class="pull-right">
-            <h1>
-              <span class="glyphicon glyphicon-thumbs-up">
-              </span>
-
+        <h1>
+          <span class="glyphicon glyphicon-thumbs-up"></span>
+              &nbsp
+              &nbsp
               Thank you so much for checking us out!
-            </h1>
+          </h1>
 
+            <div class="row">
+              <div class="col-lg-4">
+                <br/>
+
+                 <%= image_tag "homepage/people-with-thank-you-sign.jpg", :class => "image-circle" %>
+
+              </div>
+              <div class="col-lg-offset-2 col-lg-6">
+                <div class="sign-up-feature">
+                  <h3>
+                    We'd love to hear from you and what we should add. Please let us know! <a href="mailto:varun.bhartia@gmail.com">Give us feedback</a>
+                  </h3>
+                </div>
+              </div>
+            </div>
           </div>
+        <hr class="featurette-divider"> 
 
-          <br/>
-          <br/>
-          <br/> 
-          <br/> 
-
-
-          <div>
-            <h3>
-              We'd love to hear from you and what we should add. Please let us know! <a href="mailto:varun.bhartia@gmail.com">Give us feedback</a>
-
-            </h3>
-
-          </div>
-      </div>  
-
-
-      </div>
-</div>
 
 
 <!-- Modal -->
+<div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+
+        <h4 class="modal-title" id="myModalLabel">Log into Easy Workout Tracker</h4>
+      </div>
+
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-md-6 log-in-modal">
+            <h4>
+              Manual Login:
+
+            </h4>
+            <br/>
+              <%= form_for(:user, :url => session_path(:user)) do |f| %>
+                Email: 
+                <br/>
+                  <%= f.text_field :email %>
+                <br/>
+                <br/>
+                Password: <%= f.password_field :password %>
+                <br/>
+                <br/>
+                <%= f.check_box :remember_me %>
+                <%= f.label :remember_me %>
+                <br/>
+                <%= f.submit 'Sign in' %>
+                <br/>
+                <br/>
+                <%= link_to "Forgot your password?", new_password_path(:user) %>
+              <% end %>
+          </div>
+
+          <div class="col-md-6">
+            <h4>
+              Login with your social network
+            </h4>
+
+            <div class="text-align-center">    
+
+            <div class="vertical-center"> 
+            <button class="btn btn-primary btn-large" onclick="location.href='/auth/facebook'">
+              <h4>  
+                <span class="fa fa-facebook"></span>
+                facebook
+              </h4>          
+            </button>
+            <br/>
+            <br/>
+              <button class="btn btn-primary btn-large" onclick="location.href='/auth/facebook'">
+              <h4>  
+                <span class="fa fa-google-plus"></span>
+                google
+              </h4>          
+            </button>
+          </div>
+        </div>
+          
+
+          </div>
+
+      </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <div class="modal fade" id="SignUpModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -338,32 +419,64 @@ border-left:solid grey;
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 
-        <h4 class="modal-title" id="myModalLabel">Sign up for Easy Workout Tracker</h4>
+        <h4 class="modal-title" id="myModalLabel">Sign up modal</h4>
       </div>
 
       <div class="modal-body">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 log-in-modal">
             <h4>
-              Tell us who you are:
+              Create an account:
+
             </h4>
+            <br/>
+              <%= form_for(:user, :url => registration_path(:user)) do |f| %>
+                
+                Email: 
+                <br/>
+                  <%= f.text_field :email %>
+                <br/>
+                <br/>
+                Password: <%= f.password_field :password %>
+                <br/>
+                <br/>
+
+                Password Confirmation: <%= f.password_field :password_confirmation %>
+
+                <br/>
+                <br/>
+                <%= f.submit 'Create Account' %>
+                <br/>
+              <% end %>
           </div>
 
-        <div class="col-md-offset-1">
-        </div>
+          <div class="col-md-6">
+            <h4>
+              Or... even easier, login with 
+            </h4>
 
+            <div class="text-align-center">    
 
-        <div class="col-md-6 sign-up-modal-social">          
+            <div class="vertical-center"> 
             <button class="btn btn-primary btn-large" onclick="location.href='/auth/facebook'">
-            <h4>  
-              <span class="fa fa-facebook"></span>
-            facebook Log In
-            </h4>          
-          </button>
+              <h4>  
+                <span class="fa fa-facebook"></span>
+                facebook
+              </h4>          
+            </button>
+            <br/>
+            <br/>
+              <button class="btn btn-primary btn-large" onclick="location.href='/auth/facebook'">
+              <h4>  
+                <span class="fa fa-google-plus"></span>
+                google
+              </h4>          
+            </button>
+          </div>
+        </div>
           
 
-
-      </div>
+          </div>
 
       </div>
       </div>
