--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -290,9 +290,12 @@
             <div class="sign-up-feature">
               <center>
 
-              <button type="button" class="btn btn-primary btn-lg">Log in</button>
-              &nbsp &nbsp &nbsp
-              <button type="button" class="btn btn-primary btn-lg">Sign up</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#SignUpModal">Sign Up</button>
+
+                &nbsp
+
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#LoginModal">Log in</button>
+
             </center>
             </div>
           </div>
