fixed user profile page

--- a/app/views/user/profile.html.erb
+++ b/app/views/user/profile.html.erb
@@ -1,6 +1,6 @@
 <!-- user profile homepage management -->
 
-
+<div class="container">
 
 User Profile Management Page
 
@@ -46,4 +46,5 @@ User Profile Management Page
 
   </div>
 
+</div>
 </div>
