--- a/app/views/layouts/shared/_header_menu.html.erb
+++ b/app/views/layouts/shared/_header_menu.html.erb
@@ -1,3 +1,12 @@
+<style>
+
+.margin-top-5 {
+  margin-top: 100px;
+}
+
+</style>
+
+
 <div class="navbar-wrapper">
   <div class="navbar navbar-inverse navbar-static-top" role="navigation">
     <div class="container">
@@ -21,21 +30,24 @@
 
                     <b class="caret"></b>
                 </a>
-              
+
                 <ul class="dropdown-menu">
-                      
-                  <li>
-                    <a href="#">
-                      Profile Settings
-                    </a>
-                  </li>
-                  <li>
-                    <a href="/users/sign_out">
-                      Log Out
-                    </a>
-                  </li>
+
+                        
+                    <li>
+                      <a href="/user/profile">
+                        Profile Settings
+                      </a>
+                    </li>
+                    <li>
+                      <a href="/users/sign_out">
+                        Log Out
+                      </a>
+                    </li>
+
               
                 </ul>
+
               </li>
 
             </ul>
