--- a/app/views/layouts/shared/_header_menu.html.erb
+++ b/app/views/layouts/shared/_header_menu.html.erb
@@ -12,48 +12,46 @@
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="/">Easy Workout Tracker!</a>
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
       </div>
 
       <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav pull-right margin-right">
+          <ul class="navbar-nav navbar-right">
 
-        <div class="pull-right margin-right">
-          <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle margin-right" data-toggle="dropdown">
 
-            <ul class="navbar-nav navbar-right">
+                  <%= current_user.full_name %> &nbsp
 
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle margin-right" data-toggle="dropdown">
+                  <%=image_tag current_user.profile_pic_url, size: "50x50"%>
 
-                    <%= current_user.full_name %> &nbsp
+                  <b class="caret"></b>
+              </a>
 
-                    <%=image_tag current_user.profile_pic_url, size: "50x50"%>
-
-                    <b class="caret"></b>
-                </a>
-
-                <ul class="dropdown-menu">
-
-                        
-                    <li>
-                      <a href="/user/profile">
-                        Profile Settings
-                      </a>
-                    </li>
-                    <li>
-                      <a href="/users/sign_out">
-                        Log Out
-                      </a>
-                    </li>
-
-              
-                </ul>
-
-              </li>
-
-            </ul>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="/user/profile">
+                    Profile Settings
+                  </a>
+                </li>
+                <li>
+                  <a href="/users/sign_out">
+                    Log Out
+                  </a>
+                </li>              
+              </ul>
+            </li>
           </ul>
-        </div>    
+        </ul>
       </div>
+
     </div>
   </div>
 </div>
