fixed mobile layout

--- a/app/views/static_pages/home_page.html.erb
+++ b/app/views/static_pages/home_page.html.erb
@@ -186,7 +186,7 @@
           <%= image_tag "homepage/yoga.jpg", :class => "img-responsive" %>
 
           <div class="container">
-            <div class="carousel-caption">
+            <div class="carousel-caption hidden-xs">
               
               <h1>Share your workouts with your friends!</h1>
               
@@ -198,10 +198,10 @@
           <%= image_tag "homepage/women-working-out.jpg", :class => "img-responsive" %>
 
           <div class="container">
-            <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+            <div class="carousel-caption hidden-xs">
+              <h1>Keep a record of your workouts</h1>
+              <p>Easy workout tracker makes it easy to keep a record of your workouts and observe trends and get summary reports</p>
+
             </div>
           </div>
         </div>
@@ -211,10 +211,10 @@
 
 
           <div class="container">
-            <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+            <div class="carousel-caption hidden-xs">
+              <h1>Keep Yourself Motivated</h1>
+              <p>Share tips, workouts, and receive kudos from your friends!</p>
+
             </div>
           </div>
         </div>
